<resources>
    <string name="app_name">Sapori Italiano</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="client">Client</string>
    <string name="admin">Admin</string>
    <string name="not_registered_sign_up">Not Registered? <u>Sign Up</u></string>
    <string name="terms_and_conditions">By signing in, you accept\n<u>Terms &amp; Conditions</u> and <u>Privacy Policy</u></string>
    <string name="client_name">Client Email</string>
    <string name="admin_name">Admin Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="create_account">Create Account</string>
    <string name="cancel_and_go_back">Cancel And Go Back</string>
    <string name="home">Home</string>
    <string name="received_orders">Received Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="settings">Settings</string>

    <string name="herbs">Herbs</string>
    <string name="log_out">Log Out</string>
    <string name="accept_order">Accept Order</string>
    <string name="status">Status</string>
    <string name="pending_delivery">Pending delivery</string>
    <string name="delivered">Delivered</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectur adipiscing elit, sed do eiusod tempor incididunt</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="size">Size</string>
    <string name="side_dish">Side Dish</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="mayonnaise">Mayonnaise</string>
    <string name="cheese">Cheese</string>
    <string name="cart">Cart</string>
    <string name="subtotal">Subtotal:</string>
    <string name="place_order">Place Order</string>
    <string name="total_price">Total Price</string>
    <string name="my_cart">My Cart</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="choose_image">Choose Image</string>
    <string name="add_product">Add Product</string>
    <string name="decline_order">Decline Order</string>
    <string name="cancel_order">Cancel Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
